Added Hero, Footer, Contact Page

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
     background-color: #fdfeff;
     overflow-x: hidden ;
   }
+
+  button{
+    @apply border py-2 px-3 rounded-full;
+  }
 }
 
 
